fixed spacing i hope

--- a/03floats/styles/style.css
+++ b/03floats/styles/style.css
@@ -1,54 +1,61 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+}
+
 header {
-    background-color: #183a55;
-    position: fixed;
-    width: 100%;
+  background-color: #183a55;
+  /* position: fixed; */
+  width: 100%;
 }
 
 header.logo {
-    float: left;
+  float: left;
 }
 
 header ul {
-    float: right;
-    margin-top: 33px;
-    color: white;
+  float: right;
+  margin-top: 33px;
+  color: white;
 }
 
 header ul li {
-    float: left;
-    list-style: none;
-    margin-right: 10px;
+  float: left;
+  list-style: none;
+  margin-right: 10px;
 }
 
 header a {
-    color: white;
+  color: white;
 }
 
 header a:hover {
-    color: #018d80;
+  color: #018d80;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .clearfix:after {
-    content: "";
-    clear: both;
-    display: block;
+  content: "";
+  clear: both;
+  display: block;
 }
 
 main {
-    height: 100vh;
-    padding-top: 100px;
-    background-image: url("../img/airline.jpg");
-    background-size: cover;
+  height: 100vh;
+  padding: 100px;
+  background-image: url("../img/airline.jpg");
+  background-size: cover;
 }
 
 button {
-    float: left;
-    border-color: none;
-    color: green;
+  border-color: none;
+  color: green;
 }
 
 /*
@@ -60,51 +67,58 @@ button {
   }*/
 
 .maindiv {
-    width: 360px;
-    background-color: rgb(10, 2, 59);
+  width: 360px;
+  background-color: rgb(10, 2, 59);
 }
 
 .imgicon {
-    height: 20px;
-    width: 20px;
-    color: white;
+  height: 20px;
+  width: 20px;
+  color: white;
 }
 
 #icons {
-    background-color: seagreen;
-    width: 120px;
+  background-color: seagreen;
+  width: 120px;
 }
 
 .inputs {
-    width: 48%;
+  width: 48%;
 }
 
 input {
-    padding-top: 15px;
-    margin-top: 20px;
-    background-color: transparent;
+  padding-top: 15px;
+  margin-top: 20px;
+  background-color: transparent;
+}
+
+.form-container ul {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
 }
 
 .form-container li {
-    float: left;
-    width: 33.3%;
-    background-color: #018d80;
-    text-align: center;
-    padding: 10px 0;
-    color: white;
+  float: left;
+  width: 33.3%;
+  background-color: #018d80;
+  text-align: center;
+  padding: 10px 0;
+  color: white;
 }
 
-sec nav ul {
-    position: absolute;
-    left: 60px;
-    top: 160px;
+.form-container li.active {
+  background-color: #4f4ff3;
 }
 
 ul {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    list-style: none;
+  list-style: none;
 }
 
 .form-container {
-    width: 30%;
+  width: 30%;
+}
+
+form {
+  background-color: #183a55;
 }
